--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-          <h1 class="display-4">Welcome to TIC TAC TOE!</h1>
+          <h1>Welcome to TIC TAC TOE!</h1>
           <hr class="my-4">
           <p>Click the Restart to clear board</p>
           <button id="b" class="btn btn-primary btn-lg" type="button">Restart!</button>
