--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1>Welcome to TIC TAC TOE!</h1>
           <hr class="my-4">
           <p>Click the Restart to clear board</p>
-          <button id="b" class="btn btn-primary btn-lg" type="button">Restart!</button>
+          <button id="b" class="btn btn-primary btn-lg" type="button">Restart</button>
     </div>
     </div>
     <div class="xwrapper">
